--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Full Width Pics - Start Bootstrap Template</title>
+        <title>Θάλασσα Radio | Φιλοξενία Radio Player</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -19,9 +19,9 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="https://hostplayer.thalassaradio.gq">Αρχική</a></li>
+                        <li class="nav-item"><a class="nav-link" href="about.html">Σχετικά με την υπηρεσία</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://thalassaradio.gq">Πίσω στην ιστοσελίδα του ραδιοφώνου μας</a></li>
                     </ul>
                 </div>
             </div>
@@ -29,7 +29,7 @@
         <!-- Header - set the background image for the header in the line below-->
         <header class="py-5 bg-image-full" style="background-image: url('https://source.unsplash.com/wfh8dDlNFOk/1600x900')">
             <div class="text-center my-5">
-                <img class="img-fluid rounded-circle mb-4" src="https://dummyimage.com/150x150/6c757d/dee2e6.jpg" alt="..." />
+                <img class="img-fluid rounded-circle mb-4" src="https://new.thalassaradio.gq/assets/images/logo.jpg-110x103.jpg" alt="Θάλασσα Radio Host Player!" />
                 <h1 class="text-white fs-3 fw-bolder">Full Width Pics</h1>
                 <p class="text-white-50 mb-0">Landing Page Template</p>
             </div>
