--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <header class="py-5 bg-image-full" style="background-image: url('https://source.unsplash.com/wfh8dDlNFOk/1600x900')">
             <div class="text-center my-5">
                 <img class="img-fluid rounded-circle mb-4" src="https://new.thalassaradio.gq/assets/images/logo.jpg-110x103.jpg" alt="Θάλασσα Radio Host Player!" />
-                <h1 class="text-white fs-3 fw-bolder">Full Width Pics</h1>
-                <p class="text-white-50 mb-0">Landing Page Template</p>
+                <h1 class="text-white fs-3 fw-bolder">Θάλασσα Radio</h1>
+                <p class="text-white-50 mb-0">Φιλοξενία Player!</p>
             </div>
         </header>
         <!-- Content section-->
