--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
                         <h2>Μια δωρεάν υπηρεσία φιλοξενίας Radio player από το Θάλασσα Radio!</h2>
-                        <p class="lead">A single, lightweight helper class allows you to add engaging, full width background images to sections of your page.</p>
-                        <p class="mb-0">The universe is almost 14 billion years old, and, wow! Life had no problem starting here on Earth! I think it would be inexcusably egocentric of us to suggest that we're alone in the universe.</p>
+                        <p class="lead">Αποκτήστε τον δικό σας Radio player δωρεάν και άμεσα.</p>
+                        <p class="mb-0">Πως μπορείτε να το αποκτήσετε; Δείτε εδώ τις οδηγίες μας <a href="how-to.html">εδώ</a>.</p>
                     </div>
                 </div>
             </div>
