--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="https://hostplayer.thalassaradio.gq">Αρχική</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about.html">Σχετικά με την υπηρεσία</a></li>
+                        <li class="nav-item"><a class="nav-link" href="howto.html">Οδηγίες απόκτησης Radio player</a></li>
                         <li class="nav-item"><a class="nav-link" href="https://thalassaradio.gq">Πίσω στην ιστοσελίδα του ραδιοφώνου μας</a></li>
                     </ul>
                 </div>
@@ -41,13 +41,13 @@
                     <div class="col-lg-6">
                         <h2>Μια δωρεάν υπηρεσία φιλοξενίας Radio player από το Θάλασσα Radio!</h2>
                         <p class="lead">Αποκτήστε τον δικό σας Radio player δωρεάν και άμεσα.</p>
-                        <p class="mb-0">Πως μπορείτε να το αποκτήσετε; Δείτε εδώ τις οδηγίες μας <a href="how-to.html">εδώ</a>.</p>
+                        <p class="mb-0">Πως μπορείτε να το αποκτήσετε; Δείτε εδώ τις οδηγίες μας <a href="howto.html">εδώ</a>.</p>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Image element - set the background image for the header in the line below-->
-        <div class="py-5 bg-image-full" style="background-image: url('https://source.unsplash.com/4ulffa6qoKA/1200x800')">
+        <div class="py-5 bg-image-full" style="background-image: url('https://new.thalassaradio.gq/assets/images/logo.jpg-110x103.jpg')">
             <!-- Put anything you want here! The spacer below with inline CSS is just for demo purposes!-->
             <div style="height: 20rem"></div>
         </div>
@@ -56,16 +56,16 @@
             <div class="container my-5">
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
-                        <h2>Engaging Background Images</h2>
-                        <p class="lead">The background images used in this template are sourced from Unsplash and are open source and free to use.</p>
-                        <p class="mb-0">I can't tell you how many people say they were turned off from science because of a science teacher that completely sucked out all the inspiration and enthusiasm they had for the course.</p>
+                        <h2>Είναι όντως δωρεάν αυτή η υπηρεσία;</h2>
+                        <p class="lead">Φυσικά και είναι δωρεάν.</p>
+                        <p class="mb-0">Οι υπηρεσίες μας είναι δωρεάν χωρίς κρυφές χρεώσεις αφήνοντάς μας όμως να βάλουμε ένα link που οδηγεί στις δικές μας υπηρεσίες σαν Created by.</p>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div>
+            <div class="container"><p class="m-0 text-center text-white">&copy;: 2021 Θάλασσα Radio Services</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
