--- a/howto.html
+++ b/howto.html
@@ -47,9 +47,9 @@
             </div>
         </section>
         <!-- Image element - set the background image for the header in the line below-->
-        <!--<div class="py-5 bg-image-full" style="background-image: url('https://new.thalassaradio.gq/assets/images/logo.jpg-110x103.jpg')">
+        <!--<div class="py-5 bg-image-full" style="background-image: url('https://new.thalassaradio.gq/assets/images/logo.jpg-110x103.jpg')">-->
             <!-- Put anything you want here! The spacer below with inline CSS is just for demo purposes!-->
-            <div style="height: 20rem"></div>
+            <!--<div style="height: 20rem"></div>
         </div>-->
         <!-- Content section-->
         <!--<section class="py-5">
