--- a/howto.html
+++ b/howto.html
@@ -39,9 +39,13 @@
             <div class="container my-5">
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
-                        <h2>Μια δωρεάν υπηρεσία φιλοξενίας Radio player από το Θάλασσα Radio!</h2>
-                        <p class="lead">Αποκτήστε τον δικό σας Radio player δωρεάν και άμεσα.</p>
-                        <p class="mb-0">Πως μπορείτε να το αποκτήσετε; Δείτε εδώ τις οδηγίες μας <a href="howto.html">εδώ</a>.</p>
+                        <h2>Τι χρειάζεται να κάνω για να αποκτήσω τον δωρεάν Radio Player;</h2>
+                        <p class="lead">Διαβάστε τα βήματα παρακάτω και η ομάδα μας θα σας βοηθήσει να τον αποκτήσετε!</p>
+                        <p class="mb-0"><ol type="1">
+                          <li>Στείλτε στο <a href="mailto:playerbuild@thalassaradio.gq">playerbuild@thalassaradio.gq</a>ένα email με θέμα <strong>"Θέλω Radio Player"</strong> και με μήνυμα το όνομα του ραδιοφωνικού σταθμού σας, το broadcast url (url αναπαραγωγής σταθμού) καθώς και το πόσο σύντομα θέλετε να είναι διαθέσιμο.</li>
+                          <li>Μόλις σας απαντήσει κάποιος από την ομάδα μας διευκρινίστε του αν θέλετε να βάλουμε στο created by δικό μας link ή όχι.</li>
+                          <li>Αν βάλουμε δικό μας link αυτό ήταν αλλά αν δεν θέλετε link τότε θα πρέπει να κανονιστούν τα περαιτέρω.</li>
+                        </ol></p>
                     </div>
                 </div>
             </div>
