--- a/ourplayer/index.html
+++ b/ourplayer/index.html
@@ -12,9 +12,9 @@
 <meta property='og:image' content='/ourplayer/logo.png'/>
 
 
-<link rel="stylesheet" type="text/css" href="/ourplayer/jplayer.nrg.css" />
+<link rel="stylesheet" type="text/css" href="https://hostplayer.thalassaradio.gq/ourplayer/jplayer.nrg.css" />
 <link href='https://fonts.googleapis.com/css?family=Ubuntu+Condensed&subset=latin,greek-ext' rel='stylesheet' type='text/css'>
-<link href="/ourplayer/nrgcss.css" rel="stylesheet" type="text/css" />
+<link href="https://hostplayer.thalassaradio.gq/ourplayer/nrgcss.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script type="text/javascript" src="/ourplayer/jquery.jplayer.min.js"></script>
 
