--- a/ourplayer/index.html
+++ b/ourplayer/index.html
@@ -16,7 +16,7 @@
 <link href='https://fonts.googleapis.com/css?family=Ubuntu+Condensed&subset=latin,greek-ext' rel='stylesheet' type='text/css'>
 <link href="https://hostplayer.thalassaradio.gq/ourplayer/nrgcss.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script type="text/javascript" src="/ourplayer/jquery.jplayer.min.js"></script>
+<script type="text/javascript" src="https://hostplayer.thalassaradio.gq/ourplayer/jquery.jplayer.min.js"></script>
 
 
 <script type="text/javascript">
