--- a/ourplayer/index.html
+++ b/ourplayer/index.html
@@ -9,7 +9,7 @@
 <meta property='og:description' content='Το Web radio που θέλετε να ακούσετε είναι εδώ!'/>
 <meta property='og:url' content='https://thalassaradio.gq/'/>
 <meta property='og:site_name' content='Θάλασσα Radio'/>
-<meta property='og:image' content='/ourplayer/logo.png'/>
+<meta property='og:image' content='https://hostplayer.thalassaradio.gq/ourplayer/logo.png'/>
 
 
 <link rel="stylesheet" type="text/css" href="https://hostplayer.thalassaradio.gq/ourplayer/jplayer.nrg.css" />
