--- a/ourplayer/index.html
+++ b/ourplayer/index.html
@@ -195,7 +195,7 @@ counter++;
 
 
 <div id="blktop">
-<div id="logo"><a href="https://thalassaradio.gq" target="_blank"><img src="/live/logo.png"/></a></div> <!-- end logo-->
+<div id="logo"><a href="https://new.thalassaradio.gq" target="_blank"><img src="https://hostplayer.thalassaradio.gq/ourplayer/logo.png"/></a></div> <!-- end logo-->
 
 
 <div id="playerarea">
