--- a/ourplayer.html
+++ b/ourplayer.html
@@ -20,7 +20,8 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="https://hostplayer.thalassaradio.gq">Αρχική</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="howto.html">Οδηγίες απόκτησης Radio player</a></li>
+                        <li class="nav-item"><a class="nav-link" href="howto.html">Οδηγίες απόκτησης Radio player</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="ourplayer.html">Θάλασσα Radio Media Player</a></li>
                         <li class="nav-item"><a class="nav-link" href="https://thalassaradio.gq">Πίσω στην ιστοσελίδα του ραδιοφώνου μας</a></li>
                     </ul>
                 </div>
