--- a/ourplayer.html
+++ b/ourplayer.html
@@ -40,7 +40,7 @@
             <div class="container my-5">
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
-                        <h2>Τι χρειάζεται να κάνω για να αποκτήσω τον δωρεάν Radio Player;</h2>
+                        <h2>Θάλασσα radio Media Player</h2>
                         <p class="lead">Διαβάστε τα βήματα παρακάτω και η ομάδα μας θα σας βοηθήσει να τον αποκτήσετε!</p>
                         <p class="mb-0"><ol type="1">
                           <li>Στείλτε στο <a href="mailto:playerbuild@thalassaradio.gq">playerbuild@thalassaradio.gq</a>ένα email με θέμα <strong>"Θέλω Radio Player"</strong> και με μήνυμα το όνομα του ραδιοφωνικού σταθμού σας, το broadcast url (url αναπαραγωγής σταθμού) καθώς και το πόσο σύντομα θέλετε να είναι διαθέσιμο.</li>
