--- a/ourplayer.html
+++ b/ourplayer.html
@@ -15,7 +15,7 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" href="#!">Φιλοξενία Player</a>
+                <a class="navbar-brand" href="https://hostplayer.thalassaradio.gq">Φιλοξενία Player</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -41,12 +41,18 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
                         <h2>Θάλασσα radio Media Player</h2>
-                        <p class="lead">Διαβάστε τα βήματα παρακάτω και η ομάδα μας θα σας βοηθήσει να τον αποκτήσετε!</p>
-                        <p class="mb-0"><ol type="1">
-                          <li>Στείλτε στο <a href="mailto:playerbuild@thalassaradio.gq">playerbuild@thalassaradio.gq</a>ένα email με θέμα <strong>"Θέλω Radio Player"</strong> και με μήνυμα το όνομα του ραδιοφωνικού σταθμού σας, το broadcast url (url αναπαραγωγής σταθμού) καθώς και το πόσο σύντομα θέλετε να είναι διαθέσιμο.</li>
-                          <li>Μόλις σας απαντήσει κάποιος από την ομάδα μας διευκρινίστε του αν θέλετε να βάλουμε στο created by δικό μας link ή όχι.</li>
-                          <li>Αν βάλουμε δικό μας link αυτό ήταν αλλά αν δεν θέλετε link τότε θα πρέπει να κανονιστούν τα περαιτέρω.</li>
-                        </ol></p>
+                        <p class="lead">Ως υπηρεσία του Θάλασσα Radio δεν μπορούσε να λείψει από τα Radio player μας το radio player του ραδιοφωνικού μας σταθμού Θάλασσα Radio!</p>
+                        <p class="mb-0"><table border="1" bordercolor="#009090">
+                          <tr>
+                            <td>Όνομα:</td><td><strong>Θάλασσα Radio</strong></td>
+                          </tr>
+                          <tr>
+                            <td>Ιστοσελίδα:</td><td><strong><a href="https://new.thalassaradio.gq/" target="blank">Επισκεφτείτε μας</a></strong></td>
+                          </tr>
+                          <tr>
+                            <td>Player:</td><td><strong><a href="https://hostplayer.thalassaradio.gq/ourplayer/">Ακούστε μας ζωντανά</a></strong></td>
+                          </tr>
+                        </table></p>
                     </div>
                 </div>
             </div>
