--- a/ourplayer.html
+++ b/ourplayer.html
@@ -22,7 +22,7 @@
                         <li class="nav-item"><a class="nav-link" href="https://hostplayer.thalassaradio.gq">Αρχική</a></li>
                         <li class="nav-item"><a class="nav-link" href="howto.html">Οδηγίες απόκτησης Radio player</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="ourplayer.html">Θάλασσα Radio Media Player</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://thalassaradio.gq">Πίσω στην ιστοσελίδα του ραδιοφώνου μας</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://new.thalassaradio.gq">Πίσω στην ιστοσελίδα του ραδιοφώνου μας</a></li>
                     </ul>
                 </div>
             </div>
