--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="https://hostplayer.thalassaradio.gq">Αρχική</a></li>
                         <li class="nav-item"><a class="nav-link" href="howto.html">Οδηγίες απόκτησης Radio player</a></li>
-                        <li class="nav-item"><a class="nav-link" href="ourplayer.html">Θάλασσα Radio Player</a></li>
+                        <li class="nav-item"><a class="nav-link" href="ourplayer.html">Θάλασσα Radio Media Player</a></li>
                         <li class="nav-item"><a class="nav-link" href="https://thalassaradio.gq">Πίσω στην ιστοσελίδα του ραδιοφώνου μας</a></li>
                     </ul>
                 </div>
