--- a/ourplayer.html
+++ b/ourplayer.html
@@ -42,7 +42,7 @@
                     <div class="col-lg-6">
                         <h2>Θάλασσα radio Media Player</h2>
                         <p class="lead">Ως υπηρεσία του Θάλασσα Radio δεν μπορούσε να λείψει από τα Radio player μας το radio player του ραδιοφωνικού μας σταθμού Θάλασσα Radio!</p>
-                        <p class="mb-0"><table border="1" bordercolor="#009090">
+                        <center><table border="1" bordercolor="#009090">
                           <tr>
                             <td>Όνομα:</td><td><strong>Θάλασσα Radio</strong></td>
                           </tr>
@@ -52,7 +52,7 @@
                           <tr>
                             <td>Player:</td><td><strong><a href="https://hostplayer.thalassaradio.gq/ourplayer/">Ακούστε μας ζωντανά</a></strong></td>
                           </tr>
-                        </table></p>
+                        </table></center>
                     </div>
                 </div>
             </div>
