--- a/howto.html
+++ b/howto.html
@@ -21,6 +21,7 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="https://hostplayer.thalassaradio.gq">Αρχική</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="howto.html">Οδηγίες απόκτησης Radio player</a></li>
+                        <li class="nav-item"><a class="nav-link" href="ourplayer.html">Θάλασσα Radio Media Player</a></li>
                         <li class="nav-item"><a class="nav-link" href="https://thalassaradio.gq">Πίσω στην ιστοσελίδα του ραδιοφώνου μας</a></li>
                     </ul>
                 </div>
@@ -42,7 +43,7 @@
                         <h2>Τι χρειάζεται να κάνω για να αποκτήσω τον δωρεάν Radio Player;</h2>
                         <p class="lead">Διαβάστε τα βήματα παρακάτω και η ομάδα μας θα σας βοηθήσει να τον αποκτήσετε!</p>
                         <p class="mb-0"><ol type="1">
-                          <li>Στείλτε στο <a href="mailto:playerbuild@thalassaradio.gq">playerbuild@thalassaradio.gq</a>ένα email με θέμα <strong>"Θέλω Radio Player"</strong> και με μήνυμα το όνομα του ραδιοφωνικού σταθμού σας, το broadcast url (url αναπαραγωγής σταθμού) καθώς και το πόσο σύντομα θέλετε να είναι διαθέσιμο.</li>
+                          <li>Στείλτε στο <a href="mailto:playerbuild@thalassaradio.gq">playerbuild@thalassaradio.gq</a> ένα email με θέμα <strong>"Θέλω Radio Player"</strong> και με μήνυμα το όνομα του ραδιοφωνικού σταθμού σας, το broadcast url (url αναπαραγωγής σταθμού) καθώς και το πόσο σύντομα θέλετε να είναι διαθέσιμο.</li>
                           <li>Μόλις σας απαντήσει κάποιος από την ομάδα μας διευκρινίστε του αν θέλετε να βάλουμε στο created by δικό μας link ή όχι.</li>
                           <li>Αν βάλουμε δικό μας link αυτό ήταν αλλά αν δεν θέλετε link τότε θα πρέπει να κανονιστούν τα περαιτέρω.</li>
                         </ol></p>
