--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Θάλασσα Radio | Φιλοξενία Radio Player</title>
+        <meta property='og:title' content='Θάλασσα Radio - Φιλοξενία Player'/>
+        <meta property='og:description' content='Θέλετε έναν οικονομικό ή δωρεάν και απλό player για το Webradio σας; Το Team μας είναι στην διάθεσή σας!'/>
+        <meta property='og:url' content='https://hostplayer.thalassaradio.gq/'/>
+        <meta property='og:site_name' content='Φιλοξενία Player'/>
+        <meta property='og:image' content='https://hostplayer.thalassaradio.gq/ourplayer/logo.png'/>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
