--- a/projectpap/index.html
+++ b/projectpap/index.html
@@ -6,17 +6,17 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Project PAP Radio - Ακούστε 24/7 νησιώτικη μουσική</title>
 <meta property='og:title' content='Project PAP Radio - Ακούστε 24/7 νησιώτικη μουσική'/>
-<meta property='og:description' content='Το Web radio του YouTube καναλιού είναι εδώ για να ακούτε 24/7 νησιώτικη μουσική Non stop!'/>
-<meta property='og:url' content='https://radio.projectpap.gq/'/>
-<meta property='og:site_name' content='Project PAP Radio'/>
-<meta property='og:image' content='/live/projectpapradio/logo.png'/>
+<meta property='og:description' content='Μόνο εδώ μπορείτε να ακούσετε 24/7 Non stop νησιωτική μουσική!'/>
+<meta property='og:url' content='https://hostplayer.thalassaradio.gq/projectpap/'/>
+<meta property='og:site_name' content='Project PAP Radio Live'/>
+<meta property='og:image' content='https://hostplayer.thalassaradio.gq/projectpap/logo.png'/>
 
 
-<link rel="stylesheet" type="text/css" href="/live/projectpapradio/jplayer.nrg.css" />
+<link rel="stylesheet" type="text/css" href="https://hostplayer.thalassaradio.gq/projectpap/jplayer.nrg.css" />
 <link href='https://fonts.googleapis.com/css?family=Ubuntu+Condensed&subset=latin,greek-ext' rel='stylesheet' type='text/css'>
-<link href="/live/projectpapradio/nrgcss.css" rel="stylesheet" type="text/css" />
+<link href="https://hostplayer.thalassaradio.gq/projectpap/nrgcss.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script type="text/javascript" src="/live/projectpapradio/jquery.jplayer.min.js"></script>
+<script type="text/javascript" src="https://hostplayer.thalassaradio.gq/projectpap/jquery.jplayer.min.js"></script>
 
 
 <script type="text/javascript">
@@ -195,7 +195,7 @@ counter++;
 
 
 <div id="blktop">
-<div id="logo"><a href="https://projectpap.gq" target="_blank"><img src="/live/projectpapradio/logo.jpg"/></a></div> <!-- end logo-->
+<div id="logo"><a href="https://radio.projectpap.gq" target="_blank"><img src="https://hostplayer.thalassaradio.gq/projectpap/logo.jpg"/></a></div> <!-- end logo-->
 
 
 <div id="playerarea">
