--- a/projectpap/index.html
+++ b/projectpap/index.html
@@ -195,7 +195,7 @@ counter++;
 
 
 <div id="blktop">
-<div id="logo"><a href="https://radio.projectpap.gq" target="_blank"><img src="https://hostplayer.thalassaradio.gq/projectpap/logo.jpg"/></a></div> <!-- end logo-->
+<div id="logo"><a href="https://radio.projectpap.gq" target="_blank"><img src="http://hostplayer.thalassaradio.gq/projectpap/logo.jpg"/></a></div> <!-- end logo-->
 
 
 <div id="playerarea">
