--- a/ourplayer/index.html
+++ b/ourplayer/index.html
@@ -252,7 +252,7 @@ counter++;
 
 
 <div id="footerleft">
-<span style="margin-right:10px;"><font color="#f00">©: 2021 Θάλασσα Radio</font> </span> <span style="margin-right:10px;font-weight:bold;font-size:16px;"><!--Κατέβασε το app </span> <a style="margin-right:10px;color:#f47300;font-weight:bold;font-size:16px;" href="https://play.google.com/store/apps/details?id=gr.radio.blackman" target="_blank"> Android </a> <a style="color:#f47300;font-weight:bold;font-size:16px;" href="https://itunes.apple.com/us/app/radio-blackman/id701477182?l=el&ls=1&mt=8" target="_blank"> iphone IOS </a>-->
+<span style="margin-right:10px;"><font color="#f00">©: 2021 - 2022 Θάλασσα Radio</font> </span> <span style="margin-right:10px;font-weight:bold;font-size:16px;"><!--Κατέβασε το app </span> <a style="margin-right:10px;color:#f47300;font-weight:bold;font-size:16px;" href="https://play.google.com/store/apps/details?id=gr.radio.blackman" target="_blank"> Android </a> <a style="color:#f47300;font-weight:bold;font-size:16px;" href="https://itunes.apple.com/us/app/radio-blackman/id701477182?l=el&ls=1&mt=8" target="_blank"> iphone IOS </a>-->
 </div>
 </div> <!-- end footer -->
 <!--/* OpenX iFrame Tag v2.8.6-rc2 */-->
