--- a/projectpap.html
+++ b/projectpap.html
@@ -41,7 +41,7 @@
             <div class="container my-5">
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
-                        <h2>Θάλασσα radio Media Player</h2>
+                        <h2>Project PAP Radio Media Player</h2>
                         <p class="lead">Ως συνεργάτης μας το Project PAP Radio έχει επιλέξει να φιλοξενηθεί ο Player του στην δική μας υπηρεσία φιλοξενίας Player!</p>
                         <center><table border="8" bordercolor="brown">
                           <tr>
