--- a/howto.html
+++ b/howto.html
@@ -22,6 +22,7 @@
                         <li class="nav-item"><a class="nav-link" href="https://hostplayer.thalassaradio.gq">Αρχική</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="howto.html">Οδηγίες απόκτησης Radio player</a></li>
                         <li class="nav-item"><a class="nav-link" href="ourplayer.html">Θάλασσα Radio Media Player</a></li>
+                        <li class="nav-item"><a class="nav-link" href="projectpap.html">Project PAP Radio Media Player</a></li>
                         <li class="nav-item"><a class="nav-link" href="https://new.thalassaradio.gq">Πίσω στην ιστοσελίδα του ραδιοφώνου μας</a></li>
                     </ul>
                 </div>
