--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <li class="nav-item"><a class="nav-link" href="howto.html">Οδηγίες απόκτησης Radio player</a></li>
                         <li class="nav-item"><a class="nav-link" href="ourplayer.html">Θάλασσα Radio Media Player</a></li>
                         <li class="nav-item"><a class="nav-link" href="projectpap.html">Project PAP Radio Media Player</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://new.thalassaradio.gq">Πίσω στην ιστοσελίδα του ραδιοφώνου μας</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://thalassaradio.gq">Πίσω στην ιστοσελίδα του ραδιοφώνου μας</a></li>
                     </ul>
                 </div>
             </div>
@@ -36,7 +36,7 @@
         <!-- Header - set the background image for the header in the line below-->
         <header class="py-5 bg-image-full" style="background-image: url('https://source.unsplash.com/wfh8dDlNFOk/1600x900')">
             <div class="text-center my-5">
-                <img class="img-fluid rounded-circle mb-4" src="https://new.thalassaradio.gq/assets/images/logo.jpg-110x103.jpg" alt="Θάλασσα Radio Host Player!" />
+                <img class="img-fluid rounded-circle mb-4" src="https://thalassaradio.gq/img/thalassa_radio_logo.png" alt="Θάλασσα Radio Host Player!" />
                 <h1 class="text-white fs-3 fw-bolder">Θάλασσα Radio</h1>
                 <p class="text-white-50 mb-0">Φιλοξενία Player!</p>
             </div>
