--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
         </section>
         <!-- Image element - set the background image for the header in the line below-->
-        <div class="py-5 bg-image-full" style="background-image: url('https://new.thalassaradio.gq/assets/images/logo.jpg-110x103.jpg')">
+        <div class="py-5 bg-image-full" style="background-image: url('https://thalassaradio.gq/img/thalassa_radio_logo.png')">
             <!-- Put anything you want here! The spacer below with inline CSS is just for demo purposes!-->
             <div style="height: 20rem"></div>
         </div>
@@ -72,7 +72,7 @@
         </section>
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">&copy;: 2021 - 2022 Θάλασσα Radio Services</p></div>
+            <div class="container"><p class="m-0 text-center text-white">&copy;: 2021 - 2023 Θάλασσα Radio Services</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
