--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
         <meta name="author" content="" />
         <title>Θάλασσα Radio | Φιλοξενία Radio Player</title>
         <meta property='og:title' content='Θάλασσα Radio - Φιλοξενία Player'/>
-        <meta property='og:description' content='Θέλετε έναν οικονομικό ή δωρεάν και απλό player για το Webradio σας; Το Team μας είναι στην διάθεσή σας!'/>
+        <meta property='og:description' content='Θέλετε έναν οικονομικό ή δωρεάν και απλό player για το Web Radio σας; Το Team μας είναι στην διάθεσή σας!'/>
         <meta property='og:url' content='https://hostplayer.thalassaradio.gq/'/>
         <meta property='og:site_name' content='Φιλοξενία Player'/>
-        <meta property='og:image' content='https://hostplayer.thalassaradio.gq/ourplayer/logo.png'/>
+        <meta property='og:image' content='https://thalassaradio.gq/img/thalassa_radio_logo.png'/>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="https://thalassaradio.gq/img/thalassa_radio_logo.png" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
