--- a/howto.html
+++ b/howto.html
@@ -23,7 +23,7 @@
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="howto.html">Οδηγίες απόκτησης Radio player</a></li>
                         <li class="nav-item"><a class="nav-link" href="ourplayer.html">Θάλασσα Radio Media Player</a></li>
                         <li class="nav-item"><a class="nav-link" href="projectpap.html">Project PAP Radio Media Player</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://new.thalassaradio.gq">Πίσω στην ιστοσελίδα του ραδιοφώνου μας</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://thalassaradio.gq">Πίσω στην ιστοσελίδα του ραδιοφώνου μας</a></li>
                     </ul>
                 </div>
             </div>
@@ -31,7 +31,7 @@
         <!-- Header - set the background image for the header in the line below-->
         <header class="py-5 bg-image-full" style="background-image: url('https://source.unsplash.com/wfh8dDlNFOk/1600x900')">
             <div class="text-center my-5">
-                <img class="img-fluid rounded-circle mb-4" src="https://new.thalassaradio.gq/assets/images/logo.jpg-110x103.jpg" alt="Θάλασσα Radio Host Player!" />
+                <img class="img-fluid rounded-circle mb-4" src="https://thalassaradio.gq/img/thalassa_radio_logo.png" alt="Θάλασσα Radio Host Player!" />
                 <h1 class="text-white fs-3 fw-bolder">Θάλασσα Radio</h1>
                 <p class="text-white-50 mb-0">Φιλοξενία Player!</p>
             </div>
@@ -44,7 +44,7 @@
                         <h2>Τι χρειάζεται να κάνω για να αποκτήσω τον δωρεάν Radio Player;</h2>
                         <p class="lead">Διαβάστε τα βήματα παρακάτω και η ομάδα μας θα σας βοηθήσει να τον αποκτήσετε!</p>
                         <p class="mb-0"><ol type="1">
-                          <li>Στείλτε στο <a href="mailto:playerbuild@thalassaradio.gq">playerbuild@thalassaradio.gq</a> ένα email με θέμα <strong>"Θέλω Radio Player"</strong> και με μήνυμα το όνομα του ραδιοφωνικού σταθμού σας, το broadcast url (url αναπαραγωγής σταθμού) καθώς και το πόσο σύντομα θέλετε να είναι διαθέσιμο.</li>
+                          <li>Στείλτε στο <a href="mailto:thalassaradioservices@outlook.com">thalassaradioservices@outlook.com</a> ένα email με θέμα <strong>"Θέλω Radio Player"</strong> και με μήνυμα το όνομα του ραδιοφωνικού σταθμού σας, το broadcast url (url αναπαραγωγής σταθμού) καθώς και το πόσο σύντομα θέλετε να είναι διαθέσιμο.</li>
                           <li>Μόλις σας απαντήσει κάποιος από την ομάδα μας διευκρινίστε του αν θέλετε να βάλουμε στο created by δικό μας link ή όχι.</li>
                           <li>Αν βάλουμε δικό μας link αυτό ήταν αλλά αν δεν θέλετε link τότε θα πρέπει να κανονιστούν τα περαιτέρω.</li>
                         </ol></p>
@@ -53,7 +53,7 @@
             </div>
         </section>
         <!-- Image element - set the background image for the header in the line below-->
-        <!--<div class="py-5 bg-image-full" style="background-image: url('https://new.thalassaradio.gq/assets/images/logo.jpg-110x103.jpg')">-->
+        <!--<div class="py-5 bg-image-full" style="background-image: url('https://thalassaradio.gq/img/thalassa_radio_logo.png')">-->
             <!-- Put anything you want here! The spacer below with inline CSS is just for demo purposes!-->
             <!--<div style="height: 20rem"></div>
         </div>-->
