--- a/howto.html
+++ b/howto.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Θάλασσα Radio | Φιλοξενία Radio Player</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="https://thalassaradio.gq/img/thalassa_radio_logo.png" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
