--- a/howto.html
+++ b/howto.html
@@ -19,10 +19,10 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="https://hostplayer.thalassaradio.gq">Αρχική</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="howto.html">Οδηγίες απόκτησης Radio player</a></li>
-                        <li class="nav-item"><a class="nav-link" href="ourplayer.html">Θάλασσα Radio Media Player</a></li>
-                        <li class="nav-item"><a class="nav-link" href="projectpap.html">Project PAP Radio Media Player</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/">Αρχική</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="howto">Οδηγίες απόκτησης Radio player</a></li>
+                        <li class="nav-item"><a class="nav-link" href="ourplayer">Θάλασσα Radio Media Player</a></li>
+                        <li class="nav-item"><a class="nav-link" href="projectpapplayer">Project PAP Radio Media Player</a></li>
                         <li class="nav-item"><a class="nav-link" href="https://thalassaradio.gq">Πίσω στην ιστοσελίδα του ραδιοφώνου μας</a></li>
                     </ul>
                 </div>
