--- a/ourplayer.html
+++ b/ourplayer.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Θάλασσα Radio | Φιλοξενία Radio Player</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="https://thalassaradio.gq/img/thalassa_radio_logo.png" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
@@ -19,11 +19,11 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="https://hostplayer.thalassaradio.gq">Αρχική</a></li>
-                        <li class="nav-item"><a class="nav-link" href="howto.html">Οδηγίες απόκτησης Radio player</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="ourplayer.html">Θάλασσα Radio Media Player</a></li>
-                        <li class="nav-item"><a class="nav-link" href="projectpap.html">Project PAP Radio Media Player</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://new.thalassaradio.gq">Πίσω στην ιστοσελίδα του ραδιοφώνου μας</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/">Αρχική</a></li>
+                        <li class="nav-item"><a class="nav-link" href="howto">Οδηγίες απόκτησης Radio player</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="ourplayer">Θάλασσα Radio Media Player</a></li>
+                        <li class="nav-item"><a class="nav-link" href="projectpapplayer">Project PAP Radio Media Player</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://thalassaradio.gq">Πίσω στην ιστοσελίδα του ραδιοφώνου μας</a></li>
                     </ul>
                 </div>
             </div>
@@ -31,7 +31,7 @@
         <!-- Header - set the background image for the header in the line below-->
         <header class="py-5 bg-image-full" style="background-image: url('https://source.unsplash.com/wfh8dDlNFOk/1600x900')">
             <div class="text-center my-5">
-                <img class="img-fluid rounded-circle mb-4" src="https://new.thalassaradio.gq/assets/images/logo.jpg-110x103.jpg" alt="Θάλασσα Radio Host Player!" />
+                <img class="img-fluid rounded-circle mb-4" src="https://thalassaradio.gq/img/thalassa_radio_logo.png" alt="Θάλασσα Radio Host Player!" />
                 <h1 class="text-white fs-3 fw-bolder">Θάλασσα Radio</h1>
                 <p class="text-white-50 mb-0">Φιλοξενία Player!</p>
             </div>
@@ -48,7 +48,7 @@
                             <td>Όνομα:</td><td><strong>Θάλασσα Radio</strong></td>
                           </tr>
                           <tr>
-                            <td>Ιστοσελίδα:</td><td><strong><a href="https://new.thalassaradio.gq/" target="blank">Επισκεφτείτε μας</a></strong></td>
+                            <td>Ιστοσελίδα:</td><td><strong><a href="https://thalassaradio.gq/" target="blank">Επισκεφτείτε μας</a></strong></td>
                           </tr>
                           <tr>
                             <td>Player:</td><td><strong><a href="https://hostplayer.thalassaradio.gq/ourplayer/">Ακούστε μας ζωντανά</a></strong></td>
@@ -77,7 +77,7 @@
         </section>-->
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">&copy;: 2021 - 2022 Θάλασσα Radio Services</p></div>
+            <div class="container"><p class="m-0 text-center text-white">&copy;: 2021 - 2023 Θάλασσα Radio Services</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
