--- a/ourplayer.html
+++ b/ourplayer.html
@@ -51,7 +51,7 @@
                             <td>Ιστοσελίδα:</td><td><strong><a href="https://thalassaradio.gq/" target="blank">Επισκεφτείτε μας</a></strong></td>
                           </tr>
                           <tr>
-                            <td>Player:</td><td><strong><a href="https://hostplayer.thalassaradio.gq/ourplayer/">Ακούστε μας ζωντανά</a></strong></td>
+                            <td>Player:</td><td><strong><a href="https://thalassaradio.gq/general/">Ακούστε μας ζωντανά</a></strong></td>
                           </tr>
                         </table></center>
                     </div>
