--- a/projectpapplayer.html
+++ b/projectpapplayer.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Θάλασσα Radio | Φιλοξενία Radio Player</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="https://thalassaradio.gq/img/thalassa_radio_logo.png />
+        <link rel="icon" type="image/x-icon" href="https://thalassaradio.gq/img/thalassa_radio_logo.png" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
@@ -41,17 +41,17 @@
             <div class="container my-5">
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
-                        <h2>Project PAP Radio Media Player</h2>
+                        <h2>Θάλασσα radio Media Player</h2>
                         <p class="lead">Ως συνεργάτης μας το Project PAP Radio έχει επιλέξει να φιλοξενηθεί ο Player του στην δική μας υπηρεσία φιλοξενίας Player!</p>
-                        <center><table border="8" bordercolor="brown">
+                        <center><table border="8" bordercolor="#009090">
                           <tr>
                             <td>Όνομα:</td><td><strong>Project PAP Radio</strong></td>
                           </tr>
                           <tr>
-                            <td>Ιστοσελίδα:</td><td><strong><a href="https://radio.projectpap.gq/" target="blank">Επισκεφτείτε μας</a></strong></td>
+                            <td>Ιστοσελίδα:</td><td><strong>Προσωρινά Down</strong></td>
                           </tr>
                           <tr>
-                            <td>Player:</td><td><strong><a href="https://hostplayer.thalassaradio.gq/projectpap/">Ακούστε μας ζωντανά</a></strong></td>
+                            <td>Player:</td><td><strong><a href="https://hostplayer.thalassaradio.gq/projectpap/new">Ακούστε μας ζωντανά</a></strong></td>
                           </tr>
                         </table></center>
                     </div>
