--- a/projectpap/new/index.html
+++ b/projectpap/new/index.html
@@ -6,11 +6,11 @@
 <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 <link rel="stylesheet" href="player.css">
-<title>ΘΑΛΑΣΣΑ Radio Everythink</title>
+<title>Project PAP On Air</title>
 </head>
 <body bgcolor="#0000ff">
 <!-- MAGICSTREAMS - START EMBEDDED IFRAME HTML5 PLAYER --> 
-<center><iframe width="100%" height="350" src="https://radioplayer.link/iframe/index.php?autoplay=play&name=ΘΑΛΑΣΣΑ RADIO EVERYTHINK&logo=/img/thalassa_radio_logo.png&bgcolor=0000FF&textcolor=FFFFFF&v=2&stream=http://stream.zeno.fm/5ye7xw94tk8uv" frameborder="0" scrolling="no" style="border-radius: 8px;" allow="autoplay;"></iframe> </center>
+<center><iframe width="100%" height="350" src="https://radioplayer.link/iframe/index.php?autoplay=play&name=Project PAP&logo=/projectpap/logo.png&bgcolor=996515&textcolor=FF00FF&v=2&stream=http://stream.zeno.fm/refdy7f4v68uv" frameborder="0" scrolling="no" style="border-radius: 8px;" allow="autoplay;"></iframe> </center>
 <!-- MAGICSTREAMS - END EMBEDDED IFRAME HTML5 PLAYER -->
 </body>
 </html>
