--- a/projectpap/new/index.html
+++ b/projectpap/new/index.html
@@ -8,9 +8,9 @@
 <link rel="stylesheet" href="player.css">
 <title>Project PAP On Air</title>
 </head>
-<body bgcolor="#0000ff">
+<body bgcolor="#996515">
 <!-- MAGICSTREAMS - START EMBEDDED IFRAME HTML5 PLAYER --> 
-<center><iframe width="100%" height="350" src="https://radioplayer.link/iframe/index.php?autoplay=play&name=Project PAP&logo=/projectpap/logo.png&bgcolor=996515&textcolor=FF00FF&v=2&stream=http://stream.zeno.fm/refdy7f4v68uv" frameborder="0" scrolling="no" style="border-radius: 8px;" allow="autoplay;"></iframe> </center>
+<center><iframe width="100%" height="350" src="https://radioplayer.link/iframe/index.php?autoplay=play&name=Project PAP&logo=/projectpap/logo.png&bgcolor=996515&textcolor=FFFF00&v=2&stream=http://stream.zeno.fm/refdy7f4v68uv" frameborder="0" scrolling="no" style="border-radius: 8px;" allow="autoplay;"></iframe> </center>
 <!-- MAGICSTREAMS - END EMBEDDED IFRAME HTML5 PLAYER -->
 </body>
 </html>
