--- a/projectpap/new/index.html
+++ b/projectpap/new/index.html
@@ -7,6 +7,8 @@
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 <link rel="stylesheet" href="player.css">
 <title>Project PAP On Air</title>
+<!-- Favicon-->
+<link rel="icon" type="image/x-icon" href="/projectpap/logo.png" />
 </head>
 <body bgcolor="#996515">
 <!-- MAGICSTREAMS - START EMBEDDED IFRAME HTML5 PLAYER --> 
